--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
 		"@cloudflare/pages-plugin-mailchannels": "0.1.5",
 		"astro": "5.3.0",
 		"gsap": "^3.13.0",
+		"katex": "^0.16.22",
+		"rehype-katex": "^7.0.1",
+		"remark-math": "^6.0.0",
 		"tailwindcss": "3.4.1"
 	},
 	"devDependencies": {
