--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
-          version: 8
+          version: 9
       
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -46,7 +46,7 @@ jobs:
         run: pnpm install --frozen-lockfile
       
       - name: Build with Astro
-        run: npm run build
+        run: pnpm run build
       
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
