--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
 		"build": "astro build",
 		"preview": "astro preview",
 		"astro": "astro",
-		"pwa:generate-assets": "pwa-assets-generator --preset minimal public/logo.svg",
-		"deploy:test": "npm ci && npm run build",
-		"deploy:local": "scripts/deploy.bat"
+		"pwa:generate-assets": "pwa-assets-generator --preset minimal public/logo.svg"
 	},
 	"dependencies": {
 		"@astrojs/mdx": "4.0.8",
