--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,36 @@
-# build output
-dist/
-
-# dependencies
+# Dependencies
 node_modules/
 
-# logs
+# Production builds
+dist/
+build/
+
+# Astro cache
+.astro/
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Logs
+*.log
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
 
+# Cache
+.cache/
+.parcel-cache/
 
-# environment variables
-.env
-.env.production
+# IDE files
+.vscode/
+.idea/
 
-# macOS-specific files
+# OS generated files
 .DS_Store
+Thumbs.db
 
-.astro
-
-.unlighthouse
+# Temporary folders
+tmp/
+temp/
